tests/type-errors/contract_unknown_self_entry.arl
archetype contract_unknown_self_entry

entry exec () {
  var e : contract<int> = self.an_entry;
  transfer 0tz to entry e(3);
}
